--- a/Happiness/Happiness/Base.lproj/Main.storyboard
+++ b/Happiness/Happiness/Base.lproj/Main.storyboard
@@ -16,21 +16,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="XaN-ik-iOZ" customClass="FaceView" customModule="Happiness" customModuleProvider="target">
+                            <view contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="kDc-2h-0Tl" customClass="FaceView" customModule="Happiness" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="color">
+                                        <color key="value" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="MC0-8W-Ahj" appends="YES" id="hHo-f8-0o4"/>
+                                </connections>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="XaN-ik-iOZ" secondAttribute="trailing" id="HIH-Kj-zm8"/>
-                            <constraint firstItem="XaN-ik-iOZ" firstAttribute="bottom" secondItem="3ld-Xm-bIn" secondAttribute="top" id="UlW-85-Tkr"/>
-                            <constraint firstItem="XaN-ik-iOZ" firstAttribute="leading" secondItem="aNP-j8-mJb" secondAttribute="leading" id="gAl-uF-yrg"/>
-                            <constraint firstItem="XaN-ik-iOZ" firstAttribute="top" secondItem="aNP-j8-mJb" secondAttribute="top" id="ok3-eW-cmA"/>
+                            <constraint firstAttribute="trailing" secondItem="kDc-2h-0Tl" secondAttribute="trailing" id="3IV-qC-dYx"/>
+                            <constraint firstItem="kDc-2h-0Tl" firstAttribute="leading" secondItem="aNP-j8-mJb" secondAttribute="leading" id="MGb-6l-mr8"/>
+                            <constraint firstItem="kDc-2h-0Tl" firstAttribute="bottom" secondItem="3ld-Xm-bIn" secondAttribute="top" id="Yfj-z0-cml"/>
+                            <constraint firstItem="kDc-2h-0Tl" firstAttribute="top" secondItem="aNP-j8-mJb" secondAttribute="top" id="dN0-Zi-wVF"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="faceView" destination="kDc-2h-0Tl" id="ymH-zF-eht"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aXM-nB-xDc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="MC0-8W-Ahj">
+                    <connections>
+                        <action selector="changeHappiness:" destination="QJc-el-i5m" id="Who-Ld-o87"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="468" y="415"/>
         </scene>
