Added Smashtag Required Tasks

--- a/Psychologist/Psychologist/Base.lproj/Main.storyboard
+++ b/Psychologist/Psychologist/Base.lproj/Main.storyboard
@@ -273,6 +273,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Ig5-hD-lCs"/>
+        <segue reference="dl8-d7-wg8"/>
     </inferredMetricsTieBreakers>
 </document>
