--- a/Trax/Trax/Base.lproj/Main.storyboard
+++ b/Trax/Trax/Base.lproj/Main.storyboard
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kEO-9W-0BP">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Trax" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="GPXViewController" customModule="Trax" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -17,27 +16,83 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8r3-Du-6zB">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="03M-SZ-DJG">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="8r3-Du-6zB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Tem-Gm-4hi"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="8r3-Du-6zB" secondAttribute="bottom" id="hxH-3S-guR"/>
-                            <constraint firstItem="8r3-Du-6zB" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="m3a-gb-eT6"/>
-                            <constraint firstAttribute="trailing" secondItem="8r3-Du-6zB" secondAttribute="trailing" id="qe8-FI-Uwo"/>
+                            <constraint firstAttribute="trailing" secondItem="03M-SZ-DJG" secondAttribute="trailing" id="2uc-Cd-xIX"/>
+                            <constraint firstItem="03M-SZ-DJG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Qyc-yN-P4I"/>
+                            <constraint firstItem="03M-SZ-DJG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="YUB-Od-moO"/>
+                            <constraint firstItem="03M-SZ-DJG" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="dDa-hV-7Y9"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="QDj-VF-Swb"/>
                     <connections>
-                        <outlet property="textView" destination="8r3-Du-6zB" id="t5R-nh-MYl"/>
+                        <outlet property="mapView" destination="03M-SZ-DJG" id="dzE-wE-NRO"/>
+                        <segue destination="ukD-Ma-ssY" kind="show" identifier="Show Image" id="fVB-md-0Va"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1402" y="400"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="l7Z-Qp-ZOA">
+            <objects>
+                <viewController id="ukD-Ma-ssY" customClass="ImageViewController" customModule="Trax" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8my-wg-aJK"/>
+                        <viewControllerLayoutGuide type="bottom" id="C2N-CX-3vW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lwB-C5-3b6">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vbb-P2-WcA">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </scrollView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="eUV-kY-7TV">
+                                <rect key="frame" x="290" y="290" width="20" height="20"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="vbb-P2-WcA" secondAttribute="trailing" id="5m7-Qf-7MW"/>
+                            <constraint firstAttribute="centerY" secondItem="eUV-kY-7TV" secondAttribute="centerY" id="BT4-ul-o2G"/>
+                            <constraint firstItem="vbb-P2-WcA" firstAttribute="top" secondItem="lwB-C5-3b6" secondAttribute="top" id="Dce-dn-Y0x"/>
+                            <constraint firstItem="vbb-P2-WcA" firstAttribute="leading" secondItem="lwB-C5-3b6" secondAttribute="leading" id="PQi-aL-LY7"/>
+                            <constraint firstAttribute="centerX" secondItem="eUV-kY-7TV" secondAttribute="centerX" id="YAQ-eP-96t"/>
+                            <constraint firstItem="vbb-P2-WcA" firstAttribute="bottom" secondItem="C2N-CX-3vW" secondAttribute="top" id="nS8-az-ddX"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="scrollView" destination="vbb-P2-WcA" id="9Ht-Cx-RDK"/>
+                        <outlet property="spinner" destination="eUV-kY-7TV" id="6kg-kk-iOW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zFf-ct-ZZp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2183" y="400"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="QMO-iB-8Un">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kEO-9W-0BP" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vNn-Hy-paL">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="nEz-1i-McR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a0L-xp-Kdy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="670" y="400"/>
         </scene>
     </scenes>
 </document>
